--- a/static/style.css
+++ b/static/style.css
@@ -27,17 +27,20 @@
   
   section:nth-of-type(1) {
     max-width: 100%;
+    color: white;
   }
   
   
   
   section:nth-of-type(2) {
     max-width: 100%;
+    color: white;
   }
   
   section:nth-of-type(3) {
   
     max-width: 100%;
+    color: white;
   }
   
   section:nth-of-type(4) {
@@ -57,6 +60,7 @@
   
   section:nth-of-type(6) {
     max-width: 100%;
+    color: white;
   }
   
   section:nth-of-type(7) {
@@ -76,12 +80,14 @@
   section:nth-of-type(9) {
   
     max-width: 100%;
+    color: white;
    
   }
   
   section:nth-of-type(10) {
-  
+
     max-width: 100%;
+    color: white;
   }
   
   h1{
