--- a/static/common-waves.css
+++ b/static/common-waves.css
@@ -1,4 +1,3 @@
-
 /* Apply Montserrat font to specific <p> tags */
 *{
   padding: 0;
@@ -7,7 +6,7 @@
 }
 header {
   height: 50vh;
-  background-color: #a3e5f8;
+  background-color: #4BD9E8;
   position: relative;
   overflow: hidden;
 }
