--- a/static/common-waves.css
+++ b/static/common-waves.css
@@ -82,7 +82,7 @@ section p {
 
 .sidebar {
   width: 200px;
-  background-color: #ccf2fc; /* Bootstrap background color */
+  background-color: #4BD9E8; /* Bootstrap background color */
   padding: 5px;
   height: 100%;
   transition: top 0.3s; 
