--- a/static/common-waves.css
+++ b/static/common-waves.css
@@ -6,7 +6,7 @@
 }
 header {
   height: 50vh;
-  background-color: #4BD9E8;
+  background-color: #93f9c4eb;
   position: relative;
   overflow: hidden;
 }
