--- a/static/common-waves.css
+++ b/static/common-waves.css
@@ -5,7 +5,7 @@
   box-sizing: border-box;
 }
 header {
-  height: 50vh;
+  height: 70vh;
   background-color: #bcfedceb;
   position: relative;
   overflow: hidden;
@@ -74,7 +74,7 @@ header h1 {
 
 .sidebar {
   width: 210px;
-  background-color: #4BD9E8; /* Bootstrap background color */
+  background-color: #000000; /* Bootstrap background color */
   padding: 5px;
   height: 100%;
   transition: top 0.3s; 
