--- a/static/common-waves.css
+++ b/static/common-waves.css
@@ -78,6 +78,11 @@ header h1 {
   padding: 5px;
   height: 100%;
   transition: top 0.3s; 
+    font-family: 'Poppins', sans-serif;
+    font-size: 16px;
+    font-weight: bold;
+    color: #d4ffe9
+    line-height: 1.5;
 }
 
 
