--- a/static/common-waves.css
+++ b/static/common-waves.css
@@ -140,3 +140,40 @@ p.sub-stuff {
   color: #666;
   /* Optional: Set the text color */
 }
+.modal {
+  display: none;
+  position: fixed;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  background-color: rgba(0, 0, 0, 0.5); 
+}
+
+/* Styling for the modal content */
+.modal-content {
+  background-color: #fff;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  padding: 20px;
+  overflow: auto;
+}
+
+/* Close button */
+.close {
+  position: absolute;
+  top: 10px;
+  right: 10px;
+  cursor: pointer;
+}
+.modal-button {
+  background: -webkit-linear-gradient(#8bedbb,#005c74); 
+  color: #FFFFFF; 
+  font-size: large;
+  padding: 10px 20px;
+  border: none;
+  border-radius: 5px;
+  cursor: pointer;
+}
