--- a/static/common-waves.css
+++ b/static/common-waves.css
@@ -140,6 +140,7 @@ p.sub-stuff {
   color: #666;
   /* Optional: Set the text color */
 }
+
 .modal {
   display: none;
   position: fixed;
@@ -147,7 +148,7 @@ p.sub-stuff {
   left: 0;
   width: 100%;
   height: 100%;
-  background-color: rgba(0, 0, 0, 0.5); 
+  background-color: rgba(0, 0, 0, 0.5);
 }
 
 /* Styling for the modal content */
@@ -168,12 +169,19 @@ p.sub-stuff {
   right: 10px;
   cursor: pointer;
 }
+
 .modal-button {
-  background: -webkit-linear-gradient(#8bedbb,#005c74); 
-  color: #FFFFFF; 
+  background: -webkit-linear-gradient(#8bedbb, #005c74);
+  color: #FFFFFF;
   font-size: large;
   padding: 10px 20px;
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+
+.carousel-control-next-icon,
+.carousel-control-prev-icon {
+  background-color: black;
+  border-radius: 50%;
 }
