--- a/static/common-waves.css
+++ b/static/common-waves.css
@@ -149,6 +149,7 @@ p.sub-stuff {
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  overflow: auto;
 }
 
 /* Styling for the modal content */
@@ -158,8 +159,10 @@ p.sub-stuff {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  max-width: 80%;
+  max-height: 70vh;
   padding: 20px;
-  overflow: auto;
+  overflow-y: auto;
 }
 
 /* Close button */
@@ -178,6 +181,12 @@ p.sub-stuff {
   border: none;
   border-radius: 5px;
   cursor: pointer;
+}
+.modal-image {
+  width: 400px; 
+  height: 400px;
+  display: block;
+  margin: 0 auto;
 }
 
 .carousel-control-next-icon,
