--- a/static/saurav-modal.css
+++ b/static/saurav-modal.css
@@ -156,7 +156,7 @@
 }
 
 .timeline>li>.timeline-badge {
-  color: #ffffff;
+  color: #000000;
   width: 24px;
   height: 24px;
   line-height: 50px;
