--- a/static/anika-modal.css
+++ b/static/anika-modal.css
@@ -6,6 +6,7 @@
   width: 100%;
   height: 100%;
   background-color: rgba(0, 0, 0, 0.5);
+  overflow: auto;
 }
 
 /* Styling for the modal content */
@@ -15,8 +16,10 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
+  max-width: 80%;
+  max-height: 70vh;
   padding: 20px;
-  overflow: auto;
+  overflow-y: auto;
 }
 
 /* Close button */
@@ -37,4 +40,9 @@
   cursor: pointer;
 }
 
-
+.modal-image {
+  width: 400px;
+  height: 400px;
+  display: block;
+  margin: 0 auto;
+}
