--- a/static/homepagestyle.css
+++ b/static/homepagestyle.css
@@ -35,10 +35,21 @@ section
     width: 100%;
     height: 100vh;
     background-image: url('https://static.igem.wiki/teams/4641/wiki/homepage/homepage3.png');
+    z-index: 1000;
     background-size: cover; 
     background-position: center;
-    background im;
     display: flex;
+}
+
+.section img
+{
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  width: 20%;
+  height: 40%;
+  border-radius: 200%;
+  object-fit: cover;
 }
 
 .sec
@@ -68,7 +79,7 @@ section
   width: 100%;
   height: 100%;
   object-fit: cover;
- 
+  
  
 }
 .card-content
@@ -93,201 +104,22 @@ section
   line-height: 100px; 
   letter-spacing: 14px;
 }
-.card-content-2
-{
-  
-  margin-bottom: 20px;
-  position: absolute;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  text-align: center;
-  align-items: center;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  color: #124459;
-  object-fit: cover;
-  font-size: 48px;
-  font-family: Futura;
-  font-weight: 500;
-  line-height: 70px; 
-  letter-spacing: 5px;
-}
-.card-content-2-2
-{
-  
-  margin-bottom: 5px;
-  position: absolute;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  text-align: center;
-  align-items: center;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  color: #124459;
-  object-fit: cover;
-  font-size: 80px;
-  font-family: Futura;
-  font-weight: 800;
-  line-height: 70px; 
-  letter-spacing: 5px;
-}
 
-.card-content-3
-{
-  
-  margin-bottom: 20px;
-  position: absolute;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  text-align: center;
-  align-items: center;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  color: #0A3344;
-  object-fit: cover;
-  font-size: 64px;
-  font-family: Futura;
-  font-weight: 500;
-  line-height: 100px; 
-  letter-spacing: 5px;
-}
-.card-content-4
-{
-  
-  margin-bottom: 20px;
-  position: absolute;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  text-align: center;
-  align-items: center;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  color: #0A3344;
-  object-fit: cover;
-  font-size: 92px;
-  font-family: Dela Gothic One;
-  font-weight: 1000;
-  line-height: 100px; 
-  letter-spacing: 5px;
-}
-.number
-{
-  position: absolute;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  text-align: center;
-  align-items: center;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  color: #215C75;
-  object-fit: cover;
-  font-size: 128px;
-  font-family:  Dela Gothic One;
-  font-weight: 1000;
-  line-height: 100px; 
-  letter-spacing: 14px;
-}
-.number2
-{
-  position: absolute;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  text-align: center;
-  align-items: center;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  color: #124459;
-  object-fit: cover;
-  font-size: 92px;
-  font-family:  Dela Gothic One;
-  font-weight: 1000;
-  line-height: 200px; 
-  letter-spacing: 10px;
-}
-
-.card-content-5
-{
-  
-  margin-bottom: 10px;
-  position: absolute;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  text-align: center;
-  align-items: center;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  color: #0A3344;
-  object-fit: cover;
-  font-size: 48px;
-  font-family: Futura;
-  font-weight: 500;
-  line-height: 70px; 
-  letter-spacing: 10px;
-}
-.card-content-6
-{
-  
-  margin-bottom: 20px;
-  position: absolute;
-  z-index: 10;
-  display: flex;
-  justify-content: center;
-  overflow: hidden;
-  text-align: center;
-  align-items: center;
-  left: 0;
-  top: 0;
-  width: 100%;
-  height: 100%;
-  color: #FFFFFF;
-  object-fit: cover;
-  font-size: 28px;
-  font-family: Futura;
-  font-weight: 800;
-  line-height: 90px; 
-  letter-spacing: 5px;
-}
-.h2
+.label
 {
   text-align: center;
   z-index: 11;
+  width: 300px; 
+  height: auto; 
+  margin-top: 20px; 
 }
+  
 
-.section2 img:hover
+  .section2 img:hover
 {
   filter: grayscale(1);
   transform: scale(1.03);
 }
-
-
 
 .sections {
   display: flex;
@@ -314,14 +146,14 @@ section
   flex: 1;
   position: relative;
   width: 20%;
-  height: 40%;
+  height: 45%;
   border-radius: 200%;
   object-fit: cover;
 
 }
 .section2 buttons 
 {
-  top: 0;
+  top: 100px;
   left: 0;
   right: 0;
   bottom: 0;
@@ -344,3 +176,4 @@ section
   height: 100%;
   flex-shrink: 0;
 }
+
