--- a/static/common-waves.css
+++ b/static/common-waves.css
@@ -22,6 +22,24 @@ html {
   bottom: -2vw;
 }
 
+.custom-banner {
+  position: relative;
+  height: 300px; /* Set the height of your banner */
+  background-image: url('https://static.igem.wiki/teams/4641/wiki/newbanner.jpg'); /* Replace with your banner image URL */
+  background-size: cover;
+  background-position: center;
+  color: #fff; /* Text color on the banner */
+  text-align: center;
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+}
+
+.custom-banner img {
+  width: 100%; /* Make the image cover the entire width of the banner */
+  height: auto; /* Maintain the aspect ratio of the image */
+}
+
 header img:not(#shape) {
   position: absolute;
   left: 0;
